--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -47,5 +47,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          python3 evaluate_task_1.py --data_percentage 0.01
+          python3 team_template/evaluate_task_1.py --data_percentage 0.01
           echo Finished evaluation, exiting
