--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -41,5 +41,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          pip3 install -r team_template/requirements.txt
           python3 team_template/evaluate_task_1.py --data_percentage 0.01
           echo Finished evaluation, exiting
