--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: "Checkout private repo with PAT"
         run: |
-          git clone https://${{ secrets.PAT_EVALUATION_DATA }}@github.com/Sjyhne/mapai_evaluation_data.git
+          git clone https://${{ secrets.PAT_EVALUATION_DATA }}@github.com/Sjyhne/mapai_evaluation_data.git data
 
       - name: "What is in my repo"
         run: ls
