--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -47,5 +47,6 @@ jobs:
           cd team_template
           pip3 install -r requirements.txt
           python3 evaluate_task_1.py --data_percentage 0.01
-          python3 ../evaluation.py
+          cp ../data/evaluation.py .
+          python3 evaluation.py
           echo Finished evaluation, exiting
