--- a/team_template/config/evaluation_task_2.yaml
+++ b/team_template/config/evaluation_task_2.yaml
@@ -11,8 +11,8 @@ class_to_color:
 imagesize: 500
 
 test:
-  imagefolder: "../data/images/val"
-  lidarfolder: "../data/lidar/val"
-  labelfolder: "../data/masks/val"
+  imagefolder: "../data/images/test"
+  lidarfolder: "../data/lidar/test"
+  labelfolder: "../data/masks/test"
   batchsize: 1
   shuffle: False
