--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -43,9 +43,16 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Evaluation
         run: |
-          cp data/evaluation.py team_template/.
-          cd team_template
-          pip3 install -r requirements.txt
-          python3 evaluate_task_1.py --data_percentage 0.01
-          python3 evaluation.py --data_percentage 0.01
-          echo Finished evaluation, exiting
+          for d in */ ; do
+            if [ "$d" != "team_template" ]; then
+              cp data/evaluation.py "$d"/.
+              cd $d
+              pip3 install -r requirements.txt
+              python3 evaluate_task_1.py --data_percentage 0.01
+              python3 evaluation.py --data_percentage 0.01
+              echo Finished evaluation, exiting
+              cd ..
+            else
+              echo "$d"
+            fi
+          done
