--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -34,17 +34,12 @@ jobs:
           ls
           ls data
 
-      - name: Setup Python
-        uses: actions/setup-python@v4.2.0
-        with:
-          # File containing the Python version to use. Example: .python-version
-          python-version-file: .python-version
 
       # Runs a set of commands using the runners shell
       - name: Evaluation
         run: |
           for d in */ ; do
-            if [ "$d" != "team_template" ]; then
+            if [ "$d" != "team_temp" && "$d" != "data" ]; then
               cp data/evaluation.py "$d"/.
               cd $d
               pip3 install -r requirements.txt
