--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -31,8 +31,10 @@ jobs:
       - name: "Checkout private repo with PAT"
         run: |
           if [ "${{ github.actor }}" == "Sjyhne" ]; then
+            echo PRIVATE CLONE
             git clone https://${{ secrets.PAT_EVALUATION_DATA }}@github.com/Sjyhne/mapai_evaluation_data.git data
           else
+            echo PUBLIC CLONE
             git clone https://github.com/Sjyhne/mapai_validation_data.git data
           fi
 
