--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -26,10 +26,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Triggering actor
+        run: echo "${{ github.triggering_actor }}"
+
       - name: "Checkout private repo with PAT"
         run: |
           echo CLONING
-          if [ "${{ github.actor }}" == "Sjyhne" ]; then
+          if [ "${{ github.triggering_actor }}" == "Sjyhne" ]; then
             echo PRIVATE CLONE
             git clone https://${{ secrets.PAT_EVALUATION_DATA }}@github.com/Sjyhne/mapai_evaluation_data.git data
           else
@@ -45,7 +48,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Evaluation
         run: |
-          if [ "${{ github.actor }}" == "Sjyhne" ]; then
+          if [ "${{ github.triggering_actor }}" == "Sjyhne" ]; then
             for d in */ ; do
               if [ "participant" == *"$d" ]; then
                 cp data/evaluation.py "$d"/.
