narrowing down to which varibale

--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Dump GitHub context
         env:
-          GITHUB_CONTEXT: ${{ toJSON(github) }}
+          GITHUB_CONTEXT: ${{ toJSON(github.event) }}
         run: echo "$GITHUB_CONTEXT"
 
       - name: "Checkout private repo with PAT"
