--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -36,6 +36,14 @@ jobs:
           GITHUB_CONTEXT: ${{ toJSON(github.event) }}
         run: echo "$GITHUB_CONTEXT"
 
+      - name: Check if pull request
+        run: |
+          if [ -z ${{ github.event.pullrequest }} ]; then
+            echo this is a pull request
+          elif [ -z ${{ github.event.commit }} ]; then
+            echo this is a commit
+          fi
+
       - name: "Checkout private repo with PAT"
         run: |
           echo CLONING
