--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -47,7 +47,7 @@ jobs:
       - name: "Checkout private repo with PAT"
         run: |
           echo CLONING
-          if [ "${{ github.triggering_actor }}" == "Sjyhne" ]; then
+          if [ -z ${{ github.event.pullrequest }} ]; then
             echo PRIVATE CLONE
             git clone https://${{ secrets.PAT_EVALUATION_DATA }}@github.com/Sjyhne/mapai_evaluation_data.git data
           else
@@ -63,7 +63,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Evaluation
         run: |
-          if [ "${{ github.triggering_actor }}" == "Sjyhne" ]; then
+          if [ -z ${{ github.event.pullrequest }} ]; then
             for d in */ ; do
               if [ "participant" == *"$d" ]; then
                 cp data/evaluation.py "$d"/.
