--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,10 @@ dmypy.json
 .pyre/
 
 *.pt
-data/
+data/train
+data/val
+data/test
+data/task1_test
+data/task2_test
 team_template/runs/
 */submission
