--- a/team_template/pyproject.toml
+++ b/team_template/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "teamtemplate pyproject"
+name = "teamtemplate-pyproject"
 description = "Configuring the environment for running python and ML"
 requires-python = ">=3.7"
 keywords = []
