--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -37,8 +37,8 @@ jobs:
                 pip3 install $d
                 cd $d/src
                 huggingface-cli login
-                expect "Token: "
-                send "$secret.HF_EVAL_ACCESS_TOKEN"
+                expect "Token:"
+                send "$secrets.HF_EVAL_ACCESS_TOKEN"
                 python3 evaluate_task_1.py --data_percentage 0.01 --dtype task1
                 python3 evaluate_task_2.py --data_percentage 0.01 --dtype task2
                 python3 evaluation.py --data_percentage 0.01 --dtype task1 --task 1
