--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -36,7 +36,7 @@ jobs:
             for d in team_*/ ; do
                 pip3 install $d
                 cd $d/src
-                python3 -c “from huggingface_hub.hf_api import HfFolder; HfFolder.save_token(‘$secrets.HF_EVAL_ACCESS_TOKEN’)”
+                python3 -c “from huggingface_hub.hf_api import HfFolder; HfFolder.save_token(‘${{ secrets.HF_EVAL_ACCESS_TOKEN }}’)”
                 huggingface-cli login
                 python3 evaluate_task_1.py --data_percentage 0.01 --dtype task1
                 python3 evaluate_task_2.py --data_percentage 0.01 --dtype task2
