--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -18,7 +18,7 @@ jobs:
   # This workflow contains a single job called "build"
   evaluation:
     env:
-      ACCESS_TOKEN: $HF_EVAL_ACCESS_TOKEN
+      ACCESS_TOKEN: $secrets.HF_EVAL_ACCESS_TOKEN
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -35,8 +35,8 @@ jobs:
           if [ -z ${{ github.event.pull_request }} ]; then
             for d in team_*/ ; do
                 pip3 install $d
-                cd $d/src
                 python3 -c "from huggingface_hub.hf_api import HfFolder; HfFolder.save_token('$ACCESS_TOKEN')"
+                cd $d/src
                 huggingface-cli login
                 python3 evaluate_task_1.py --data_percentage 0.01 --dtype task1
                 python3 evaluate_task_2.py --data_percentage 0.01 --dtype task2
