--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -18,7 +18,7 @@ jobs:
   # This workflow contains a single job called "build"
   evaluation:
     env:
-      ACCESS_TOKEN: $secrets.HF_EVAL_ACCESS_TOKEN
+      ACCESS_TOKEN: ${{ secrets.HF_EVAL_ACCESS_TOKEN }}
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
