--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -38,6 +38,7 @@ jobs:
                 python3 -c "from huggingface_hub.hf_api import HfFolder; HfFolder.save_token('$ACCESS_TOKEN')"
                 cd $d/src
                 huggingface-cli login
+                echo $ACCESS_TOKEN
                 python3 evaluate_task_1.py --data_percentage 0.01 --dtype task1
                 python3 evaluate_task_2.py --data_percentage 0.01 --dtype task2
                 python3 evaluation.py --data_percentage 0.01 --dtype task1 --task 1
