--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -37,8 +37,7 @@ jobs:
                 pip3 install $d
                 python3 -c "from huggingface_hub.hf_api import HfFolder; HfFolder.save_token('$ACCESS_TOKEN')"
                 cd $d/src
-                huggingface-cli login
-                echo $ACCESS_TOKEN
+                echo $ACCESS_TOKEN | huggingface-cli login
                 python3 evaluate_task_1.py --data_percentage 0.01 --dtype task1
                 python3 evaluate_task_2.py --data_percentage 0.01 --dtype task2
                 python3 evaluation.py --data_percentage 0.01 --dtype task1 --task 1
