--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -38,10 +38,10 @@ jobs:
                 python3 -c "from huggingface_hub.hf_api import HfFolder; HfFolder.save_token('$ACCESS_TOKEN')"
                 cd $d/src
                 echo $ACCESS_TOKEN | huggingface-cli login
-                python3 evaluate_task_1.py --data_percentage 0.01 --dtype task1
-                python3 evaluate_task_2.py --data_percentage 0.01 --dtype task2
-                python3 evaluation.py --data_percentage 0.01 --dtype task1 --task 1
-                python3 evaluation.py --data_percentage 0.01 --dtype task2 --task 2
+                python3 evaluate_task_1.py --dtype task1
+                python3 evaluate_task_2.py --dtype task2
+                python3 evaluation.py --dtype task1 --task 1
+                python3 evaluation.py --dtype task2 --task 2
                 echo Finished evaluation, exiting
                 cd ../..
             done
