--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Evaluation
         run: |
           datapercentage=0.01
-          if [ -z ${{ github.event.pull_request }} ]; then
+          if [ -v ${{ github.event.release }} ]; then
             for d in team_*/ ; do
                 pip3 install $d
                 python3 -c "from huggingface_hub.hf_api import HfFolder; HfFolder.save_token('$ACCESS_TOKEN')"
