--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Evaluation
         run: |
           datapercentage=0.01
+          echo "${{ github.event.release }}"
           if [ -v ${{ github.event.release }} ]; then
             for d in team_*/ ; do
                 pip3 install $d
@@ -54,14 +55,14 @@ jobs:
                 echo -------------------
                 echo |Evaluating task 1|
                 echo -------------------
-                python3 evaluate_task_1.py --data_percentage 0.01 --dtype validation
-                python3 evaluation.py --data_percentage 0.01 --dtype validation --task 1
+                python3 evaluate_task_1.py --data_percentage $datapercentage --dtype validation
+                python3 evaluation.py --data_percentage $datapercentage --dtype validation --task 1
                 echo " "
                 echo -------------------
                 echo |Evaluating task 2|
                 echo -------------------
-                python3 evaluate_task_2.py --data_percentage 0.01 --dtype validation
-                python3 evaluation.py --data_percentage 0.01 --dtype validation --task 2
+                python3 evaluate_task_2.py --data_percentage $datapercentage --dtype validation
+                python3 evaluation.py --data_percentage $datapercentage --dtype validation --task 2
                 echo " "
                 echo Finished evaluation, exiting
                 cd ../..
