--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Evaluation
         run: |
           datapercentage=0.01
-          echo "${{ github.event.release }}"
           if [ ${{ github.event.release }} != "" ]; then
+            echo "Private evaluation"
             for d in team_*/ ; do
                 pip3 install $d
                 python3 -c "from huggingface_hub.hf_api import HfFolder; HfFolder.save_token('$ACCESS_TOKEN')"
@@ -48,6 +48,7 @@ jobs:
                 cd ../..
             done
           else
+            echo "Public evaluation"
             for d in team_*/ ; do
                 pip3 install $d
                 cd $d/src
