well, maybe the wildcard repo works now

--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -73,4 +73,4 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: my-artifact
-          path: ./**/results_task_*.json
+          path: ./**/**/results_task_*.json
