--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -70,6 +70,10 @@ jobs:
             done
           fi
 
+      - name: Where am I
+        run: |
+          pwd
+
       - uses: actions/upload-artifact@v3
         with:
           name: my-artifact
