--- a/team_template/pyproject.toml
+++ b/team_template/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "datasets",
     "tomli",
     "pandas",
-    "pyarrow"
+    "pyarrow",
+    "gdown",
+    "matplotlib"
 ]
 dynamic = ["version", "readme"]
 
